devops/cluster-addons/kyverno-policies/disallow-privileged.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-privileged-and-escalation
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: no-privileged-containers
      match:
        any:
          - resources: { kinds: ["Pod"] }
      exclude:
        any:
          - resources:
              namespaces:
                - kube-system
                - ingress-nginx
                - cert-manager
                - external-secrets
                - kyverno
                - argocd
      validate:
        message: "privileged containers and privilege escalation are not allowed"
        pattern:
          spec:
            containers:
              - securityContext:
                  privileged: "false"
                  allowPrivilegeEscalation: "false"
